Cambios para que deje comprar sesiones de cine. Ademas, cada cliente tendra un saldo que para comprar sesiones de cine